--- a/responsive/index.html
+++ b/responsive/index.html
@@ -363,7 +363,7 @@
         <p>北京某互联网金融公司 版权所有 &copy 2016-2017</p>
     </footer>
     
-    <script src="http://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
+    <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
 
     <script type="text/javascript">
