add history analyse

--- a/freeBalance/html/index.html
+++ b/freeBalance/html/index.html
@@ -14,7 +14,6 @@
   <title>大健康</title>
   <style type="text/css">
     body {
-      background: #f2f2f2;
       margin-bottom: 53px;
     }
     /*tabbar*/
@@ -156,8 +155,8 @@
       padding: 10px;
     }
     .heath-analyse .weui-flex__item:nth-child(2) {
-      border-left: 1px solid #999;
-      border-right: 1px solid #999;
+      border-left: 1px solid #dcdcdc;
+      border-right: 1px solid #dcdcdc;
     }
     /*special-column 226*/
     .special-column {
@@ -254,7 +253,7 @@
   <!-- history-weight -->
   <section class="history-weight">
     <div id="historyWeight" style="height: 218px"></div>
-    <a href="javascript:void(0);" class="more-row">
+    <a href="./history.html" class="more-row">
       <span></span>
     </a>
   </section>
@@ -276,7 +275,7 @@
         <p>125</p>
       </div>
     </div>
-    <a href="javascript:void(0);" class="more-row">
+    <a href="./analyse.html" class="more-row">
       <span></span>
     </a>
   </section>
