--- a/freeBalance/html/analyse.html
+++ b/freeBalance/html/analyse.html
@@ -32,6 +32,7 @@
     }
     .userName {
       margin-top: 0.3rem;
+      color: #555;
     }
     .my-header .weui-flex {
       margin-top: 0.6rem;
