modify history index pk

--- a/freeBalance/html/history.html
+++ b/freeBalance/html/history.html
@@ -38,21 +38,23 @@
       border-left: 1px solid #dcdcdc;
       border-right: 1px solid #dcdcdc;
     }
-    #historyTime {
+    .historyTime {
       padding-left: 1.35rem;
       background: url(../img/history-icon.png) no-repeat;
       background-size: 1.1rem;
     }
-    #historyWeight, #historyBmi {
+    .historyWeight, .historyBmi {
       font-size: 0.9rem;
       color: #000;
     }
-    #historyDesc {
+    .historyDesc {
       color: #000;
+      padding: 0 2px;
       font-size: 12px;
     }
-    #historyAddress {
+    .historyAddress {
       padding-left: 1.15rem;
+      padding-top: 0.15rem;
       background: url(../img/history01.png) 2% no-repeat;
       background-size: 0.6rem;
     }
@@ -62,72 +64,89 @@
   <!-- container -->
   <div class="container">
     <div class="history-item">
-      <p id="historyTime">2018-03-05</p>
+      <p class="historyTime">2018-03-05</p>
       <div class="weui-flex text-center">
         <div class="weui-flex__item">
-          <p id="historyWeight">120.2</p>
+          <p class="historyWeight">120.2</p>
           <p>体重(斤)</p>
         </div>
         <div class="weui-flex__item">
-          <p id="historyBmi">21.2</p>
+          <p class="historyBmi">21.2</p>
           <p>BMI</p>
         </div>
         <div class="weui-flex__item">
-          <p id="historyDesc">您太胖了，少吃点油腻的</p>
+          <p class="historyDesc">您太胖了，少吃点油腻的</p>
         </div>
       </div>
-      <p id="historyAddress">龙岗区坪地坪西东兴路2号</p>
+      <p class="historyAddress">龙岗区坪地坪西东兴路2号</p>
     </div>
     <div class="history-item">
-      <p id="historyTime">2018-03-04</p>
+      <p class="historyTime">2018-03-04</p>
       <div class="weui-flex text-center">
         <div class="weui-flex__item">
-          <p id="historyWeight">120.2</p>
+          <p class="historyWeight">120.2</p>
           <p>体重(斤)</p>
         </div>
         <div class="weui-flex__item">
-          <p id="historyBmi">21.2</p>
+          <p class="historyBmi">21.2</p>
           <p>BMI</p>
         </div>
         <div class="weui-flex__item">
-          <p id="historyDesc">您太胖了，少吃点油腻的</p>
+          <p class="historyDesc">您太胖了，少吃点油腻的</p>
         </div>
       </div>
-      <p id="historyAddress">龙岗区坪地坪西东兴路2号</p>
+      <p class="historyAddress">龙岗区坪地坪西东兴路2号</p>
     </div>
     <div class="history-item">
-      <p id="historyTime">2018-03-03</p>
+      <p class="historyTime">2018-03-03</p>
       <div class="weui-flex text-center">
         <div class="weui-flex__item">
-          <p id="historyWeight">120.2</p>
+          <p class="historyWeight">120.2</p>
           <p>体重(斤)</p>
         </div>
         <div class="weui-flex__item">
-          <p id="historyBmi">21.2</p>
+          <p class="historyBmi">21.2</p>
           <p>BMI</p>
         </div>
         <div class="weui-flex__item">
-          <p id="historyDesc">您太胖了，少吃点油腻的</p>
+          <p class="historyDesc">您太胖了，少吃点油腻的</p>
         </div>
       </div>
-      <p id="historyAddress">龙岗区坪地坪西东兴路2号</p>
+      <p class="historyAddress">龙岗区坪地坪西东兴路2号</p>
     </div>
     <div class="history-item">
-      <p id="historyTime">2018-03-02</p>
+      <p class="historyTime">2018-03-02</p>
       <div class="weui-flex text-center">
         <div class="weui-flex__item">
-          <p id="historyWeight">120.2</p>
+          <p class="historyWeight">120.2</p>
           <p>体重(斤)</p>
         </div>
         <div class="weui-flex__item">
-          <p id="historyBmi">21.2</p>
+          <p class="historyBmi">21.2</p>
           <p>BMI</p>
         </div>
         <div class="weui-flex__item">
-          <p id="historyDesc">您太胖了，少吃点油腻的</p>
+          <p class="historyDesc">您太胖了，少吃点油腻的</p>
         </div>
       </div>
-      <p id="historyAddress">龙岗区坪地坪西东兴路2号</p>
+      <p class="historyAddress">龙岗区坪地坪西东兴路2号</p>
+    </div>
+    <div class="history-item">
+      <p class="historyTime">2018-03-01</p>
+      <div class="weui-flex text-center">
+        <div class="weui-flex__item">
+          <p class="historyWeight">120.2</p>
+          <p>体重(斤)</p>
+        </div>
+        <div class="weui-flex__item">
+          <p class="historyBmi">21.2</p>
+          <p>BMI</p>
+        </div>
+        <div class="weui-flex__item">
+          <p class="historyDesc">您太胖了，少吃点油腻的</p>
+        </div>
+      </div>
+      <p class="historyAddress">龙岗区坪地坪西东兴路2号</p>
     </div>
   </div>
 
