--- a/freeBalance/html/pk.html
+++ b/freeBalance/html/pk.html
@@ -13,7 +13,9 @@
   <link rel="stylesheet" type="text/css" href="../css/main.css">
   <title>健康分析</title>
   <style type="text/css">
-    /*tabbar*/
+    body {
+      margin-bottom: 53px;
+    }
     .tab-icon {
       background: url(../img/tabicon.png) 0px 0px no-repeat;
       background-size: cover;
