--- a/freeBalance/html/specialColumnS.html
+++ b/freeBalance/html/specialColumnS.html
@@ -24,6 +24,12 @@
       .article-item {
         width: 15rem;
       }
+      .article-title {
+        color: #fff;
+        position: absolute;
+        top: 30%;
+        left: 10%;
+      }
     }
     .article-item img {
       width: 17.95rem;
@@ -55,7 +61,7 @@
   <div class="container">
     <ul>
       <li class="article-item">
-        <img src="../img/specialColumnS01.jpg">
+        <img src="../img/specialColumn03.jpg">
         <div class="mask"></div>
         <div class="article-title text-center">
           <p class="title">无糖胡萝卜泥馒头</p>
@@ -63,7 +69,7 @@
         </div>
       </li>
       <li class="article-item">
-        <img src="../img/specialColumnS01.jpg">
+        <img src="../img/specialColumn03.jpg">
         <div class="mask"></div>
         <div class="article-title text-center">
           <p class="title">无糖胡萝卜泥馒头</p>
@@ -71,7 +77,7 @@
         </div>
       </li>
       <li class="article-item">
-        <img src="../img/specialColumnS01.jpg">
+        <img src="../img/specialColumn03.jpg">
         <div class="mask"></div>
         <div class="article-title text-center">
           <p class="title">无糖胡萝卜泥馒头</p>
@@ -79,7 +85,7 @@
         </div>
       </li>
       <li class="article-item">
-        <img src="../img/specialColumnS01.jpg">
+        <img src="../img/specialColumn03.jpg">
         <div class="mask"></div>
         <div class="article-title text-center">
           <p class="title">无糖胡萝卜泥馒头</p>
