modified history and pk page

--- a/freeBalance/html/history.html
+++ b/freeBalance/html/history.html
@@ -58,6 +58,9 @@
       background: url(../img/history01.png) 2% no-repeat;
       background-size: 0.6rem;
     }
+    .container {
+      margin-bottom: 0.75rem;
+    }
   </style>
 </head>
 <body>
