--- a/freeBalance/html/pk.html
+++ b/freeBalance/html/pk.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" type="text/css" href="../css/weui.min.css">
   <link rel="stylesheet" type="text/css" href="../css/jquery-weui.min.css">
   <link rel="stylesheet" type="text/css" href="../css/main.css">
-  <title>健康分析</title>
+  <title>PK</title>
   <style type="text/css">
     body {
       margin-bottom: 53px;
