add map.html modified some file

--- a/freeBalance/html/analyse.html
+++ b/freeBalance/html/analyse.html
@@ -76,6 +76,11 @@
     .weui-panel {
       margin-top: 0.75rem;
     }
+    .standard-data {
+      background: url(../img/analyse_01.png) no-repeat;
+      background-size: 3.5rem 6.1rem;
+      background-position: 50%;
+    }
     /*diet-recommend sport-recommend*/
     .diet-recommend .weui-media-box__hd,
     .sport-recommend .weui-media-box__hd {
