--- a/freeBalance/html/history.html
+++ b/freeBalance/html/history.html
@@ -81,7 +81,7 @@
           <p class="historyDesc">您太胖了，少吃点油腻的</p>
         </div>
       </div>
-      <p class="historyAddress">龙岗区坪地坪西东兴路2号</p>
+      <p class="historyAddress jbh-ellipsis">龙岗区坪地坪西东兴路2号</p>
     </div>
     <div class="history-item">
       <p class="historyTime">2018-03-04</p>
@@ -98,7 +98,7 @@
           <p class="historyDesc">您太胖了，少吃点油腻的</p>
         </div>
       </div>
-      <p class="historyAddress">龙岗区坪地坪西东兴路2号</p>
+      <p class="historyAddress jbh-ellipsis">龙岗区坪地坪西东兴路2号</p>
     </div>
     <div class="history-item">
       <p class="historyTime">2018-03-03</p>
@@ -115,7 +115,7 @@
           <p class="historyDesc">您太胖了，少吃点油腻的</p>
         </div>
       </div>
-      <p class="historyAddress">龙岗区坪地坪西东兴路2号</p>
+      <p class="historyAddress jbh-ellipsis">龙岗区坪地坪西东兴路2号</p>
     </div>
     <div class="history-item">
       <p class="historyTime">2018-03-02</p>
@@ -132,7 +132,7 @@
           <p class="historyDesc">您太胖了，少吃点油腻的</p>
         </div>
       </div>
-      <p class="historyAddress">龙岗区坪地坪西东兴路2号</p>
+      <p class="historyAddress jbh-ellipsis">龙岗区坪地坪西东兴路2号</p>
     </div>
     <div class="history-item">
       <p class="historyTime">2018-03-01</p>
@@ -149,7 +149,7 @@
           <p class="historyDesc">您太胖了，少吃点油腻的</p>
         </div>
       </div>
-      <p class="historyAddress">龙岗区坪地坪西东兴路2号</p>
+      <p class="historyAddress jbh-ellipsis">龙岗区坪地坪西东兴路2号</p>
     </div>
   </div>
 
