--- a/freeBalance/html/person.html
+++ b/freeBalance/html/person.html
@@ -34,7 +34,7 @@
       color: #3da2d5;
     }
     .tab-active .tab-icon {
-      background-position: -108px 0;
+      background-position: -189px 0;
     }
     /*header*/
     .my-header {
@@ -73,8 +73,8 @@
     .user-info span.weui-cell__ft {
       margin-left: 6px;
     }
-    .user-info div.weui-cell__ft, .user-info span.weui-cell__ft {
-      padding-right: 30px;
+    .user-info .weui-cell {
+      padding-right: 2.4rem;
     }
     .user-info div.height {
       padding-right: 0;
@@ -147,7 +147,7 @@
 
   <!-- tabbar -->
   <div class="weui-tabbar">
-    <a href="index.html" class="weui-tabbar__item tab-active">
+    <a href="index.html" class="weui-tabbar__item">
       <div class="weui-tabbar__icon tab-icon">
       </div>
       <p class="weui-tabbar__label">首页</p>
@@ -162,7 +162,7 @@
       </div>
       <p class="weui-tabbar__label">我要PK</p>
     </a>
-    <a href="person.html" class="weui-tabbar__item">
+    <a href="person.html" class="weui-tabbar__item tab-active">
       <div class="weui-tabbar__icon tab-icon tab-icon3">
       </div>
       <p class="weui-tabbar__label">我的</p>
