modified person.html min-width

--- a/freeBalance/html/person.html
+++ b/freeBalance/html/person.html
@@ -102,6 +102,9 @@
       background: url('../img/more-row.png') no-repeat;
       background-size: cover;
     }
+    .user-info .weui-cell__bd {
+      min-width: 40px;
+    }
   </style>
 </head>
 <body>
