modified tabbar href

--- a/freeBalance/html/person.html
+++ b/freeBalance/html/person.html
@@ -155,7 +155,7 @@
       </div>
       <p class="weui-tabbar__label">首页</p>
     </a>
-    <a href="javascript:;" class="weui-tabbar__item">
+    <a href="map.html" class="weui-tabbar__item">
       <div class="weui-tabbar__icon tab-icon tab-icon1">
       </div>
       <p class="weui-tabbar__label">附近的秤</p>
