--- a/freeBalance/html/shopDetails.html
+++ b/freeBalance/html/shopDetails.html
@@ -8,44 +8,41 @@
   <meta name="format-detection" content="telephone=no,email=no">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <link rel="stylesheet" type="text/css" href="../css/base.css">
-  <link rel="stylesheet" type="text/css" href="../css/weui.min.css">
-  <link rel="stylesheet" type="text/css" href="../css/jquery-weui.min.css">
+  <!-- <link rel="stylesheet" type="text/css" href="../css/weui.min.css"> -->
+  <!-- <link rel="stylesheet" type="text/css" href="../css/jquery-weui.min.css"> -->
   <link rel="stylesheet" type="text/css" href="../css/main.css">
   <title>附近的秤</title>
   <style type="text/css">
     .bigImg {
-      height: 7.5rem;
+      height: 9.375rem;
     }
-    .hot-recommend {
-      height: 1.6rem;
-      background: #fff;
-      position: relative;
-    }
-    .hot-recommend img {
-      width: 1.6rem;
-      height: 1.6rem;
-      position: absolute;
+    .bigImg img {
+      width: 23.4375rem;
+      height: 9.375rem
     }
     .detailsBox {
-      height: 4.275rem;
-      padding: 0.75rem 0 0.375rem 0.75rem;
+      height: 5.34375rem;
+      padding: 0.9375rem 0 0.46875rem 0.9375rem;
       position: relative;
-      margin-bottom: 0.75rem;
+      margin-bottom: 1.0rem;
       font-size: 0.85rem;
       background: #fff;
     }
+    .detailsBox div {
+      line-height: 1.7rem;
+    }
     .detailsBox img {
-      width: 0.75rem;
-      height: 0.75rem;
+      width: 0.9375rem;
+      height: 0.9375rem;
       margin-right: 0.4rem;
 
     }
-    .hot-recommend {
-      line-height: 1.6rem; 
-    }
     #name, .hot-recommend span {
-      font-size: 0.9rem;
-      margin-right: 0.4rem;
+      font-size: 1.125rem;
+      margin: 0 0.4rem 0 0;
+    }
+    #name {
+      margin-bottom: 0.625rem;
     }
     .detailsBox .gotoImg {
       width: 45px;
@@ -55,59 +52,50 @@
       top: -1.15rem;
     }
     /*hot-recommend*/
-    .commentsImg img{
-      width: 0.35rem;
-      margin-right: 0.05rem;
-    }
-    .recommendTit{
-      height: 0.9rem;
-      line-height: 0.9rem;
-    }
-    .recommendTit img{
-      width: 0.35rem;
-      vertical-align: sub;
-    }
-    .recommendBox ul {
-      display: inline-block;
-      padding-left: 0.44rem;
-      margin-top: 0.52rem;
-    }
-    .recommendBox ul li{
-      display: inline-block;
-      float: left;
+    .hot-recommend {
+      height: 2.0rem;
+      line-height: 2rem;
       background: #fff;
-      width: 8.5rem;
-      margin-bottom: 0.6rem;
+      position: relative;
     }
-    .recommendBox ul li img{
-      width: 8.5rem;
-      height: 9.5rem;
+    .hot-recommend img {
+      width: 2rem;
+      position: absolute;
     }
-    @media only screen and (max-width: 366px) {
-      .recommendBox ul li{
-        width: 7.25rem;
+    /*recommend Box*/
+    .recommendBox ul {
+      width: 21.71875rem;
+      padding: 0;
+      margin: 0.625rem auto 0;
+    }
+    .recommendBox ul li {
+      background: #fff;
+      text-align: center;
+      float: left;
+      margin-bottom: 0.45rem;
+    }
+    .recommendBox ul li:nth-child(2n) {
+      margin-left: 0.45rem;
+    }
+    .recommendBox ul li img {
+      width: 10.625rem;
+      height: 8.21875rem;
+    }
+    @media only screen and (max-width: 356px) {
+      .recommendBox ul {
+        width: 20rem;
       }
       .recommendBox ul li img {
-        width: 7.25rem;
-        height: 8.1rem;
+        width: 9.625rem;
+        height: 7.21875rem;
       }
-    }
-    .recommendBox ul li:nth-child(2n){
-      margin-left: 0.72rem;
-    }
-    .recommendBox ul li p{
-      padding-top: 0.2rem;
-      padding-bottom: 0.35rem;
-      color: #333;
-      font-size: 0.8rem;
-      text-align: center; 
     }
   </style>
 </head>
 <body>
   <!-- container -->
   <section>
-    <div class="bigImg"><img src=""/></div>
+    <div class="bigImg"><img src="../img/shopDetail03.jpg"/></div>
     <div class="detailsBox">
       <img src="../img/shopDetail01.png" class="gotoImg">
       <p id="name" class="color-333">摩尔城</p>
@@ -138,7 +126,7 @@
       <img src="../img/shopDetail-hot.png"/>
     </div>
     <div class="recommendBox">
-      <ul>
+      <ul class="clearfix color-333">
         <li>
           <img src="../img/shopDetail02.jpg"/>
           <p>儿童健康成长体验</p>
