--- a/freeBalance/html/map.html
+++ b/freeBalance/html/map.html
@@ -183,7 +183,6 @@
       var myGlobal = {} //局部全局对象，存储map地图对象
       var options = {timeout: 8000};
       var positionNum = 0;
-      var isFirstClick = false;
 
       function showPosition(position) {
             positionNum++;
@@ -230,15 +229,17 @@
                             position: logo1,
                             map: map
                         });
-                        //自定义标注图标
-                        var anchor = new qq.maps.Point(15, 32),
-                            size = new qq.maps.Size(30, 32),
-                              origin = new qq.maps.Point(0, 0),
-                              markerIcon = new qq.maps.MarkerImage(
-                              "../img/map_on.png",
+                        //自定义标注图标 49, 57
+                        var anchor = new qq.maps.Point(25, 58),
+                            size = new qq.maps.Size(129, 150),
+                            scaleSize = new qq.maps.Size(50, 58),
+                            origin = new qq.maps.Point(0, 0),
+                            markerIcon = new qq.maps.MarkerImage(
+                              "../img/map-on.svg",
                               size, 
                               origin,
-                              anchor
+                              anchor,
+                              scaleSize
                             );
                          logo.setIcon(markerIcon);
                          
@@ -255,9 +256,9 @@
                           $('#topStore').show();
                           // 点击图标高亮，原来的恢复初始图标
                           if (myGlobal.LastTarget) {
-                            $(myGlobal.LastTarget).attr('src', '../img/map_on.png')
+                            $(myGlobal.LastTarget).attr('src', '../img/map-on.svg');
                           }
-                          $(e.event.target).attr('src', '../img/map_on-active.png')
+                          $(e.event.target).attr('src', '../img/map-on-active.svg')
                           $('#topStore').html('<div class="bus-info" data-lat="' + this.lat + '"data-lng="' + this.lng + '" data-address="' + this.address + '" data-name="' + this.name +'" data-id="' + this.id + '"><h3 class="bus-head">'+this.name+'</h3> <p class="bus-addr"><img src="../img/history01.png"><span>'+this.address+'</span> </p></div>')
                           myGlobal.LastTarget = e.event.target;
                         });
@@ -281,7 +282,7 @@
           $('.refresh').click(function () {
             location.href='map.html';
           })
-          //+'
+          // 传导航所需数据
           $('#topStore').on('click','div.bus-info', function() {
               var strHref = '';
               strHref += 'shopDetails.html?'
